<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_lobby"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:contentPadding="5dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/lobbyIdTextView"
            style="@style/Text"
            android:layout_marginStart="32dp"
            android:textSize="32sp"
            android:text="@string/default_lobby_id"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginVertical="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/lobbyIdTextView"
            app:layout_constraintStart_toEndOf="@+id/lobbyIdTextView"
            app:layout_constraintTop_toTopOf="@+id/lobbyIdTextView">

            <TextView
                android:id="@+id/lobbyNameTextView"
                style="@style/Text"
                android:layout_marginBottom="8dp"
                android:text="@string/game_name_format" />

            <TextView
                android:id="@+id/lobbyHostNameTextView"
                style="@style/Text"
                android:text="@string/host_name_format" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>