<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".game.prep.JoinGameActivity">

    <ImageView
        android:id="@+id/topImage"
        style="@style/Background.Top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView4"
        style="@style/Text"
        android:layout_marginTop="8dp"
        android:text="@string/join_game_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topImage" />

    <EditText
        android:id="@+id/gameToJoinID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/default_lobby_id"
        android:inputType="numberSigned"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/joinErrorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAlignment="center"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameToJoinID" />

    <ImageButton
        android:id="@+id/joinWithQRCode"
        style="@style/Button.Icon"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/join_with_qr_code"
        android:src="@drawable/ic_baseline_qr_code_scanner_24"
        app:tint="@color/white"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        app:layout_constraintTop_toTopOf="@id/topImage"
        app:layout_constraintEnd_toEndOf="@id/topImage" />

    <Button
        android:id="@+id/joinGameButton"
        style="@style/GradientButton"
        android:layout_marginBottom="16dp"
        android:text="@string/join_button_text"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/joinPublicLobbies"
        style="@style/Text.Subtitles"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/public_lobbies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/joinErrorView" />

    <TextView
        android:id="@+id/lobbySortTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/sort_by"
        app:layout_constraintEnd_toStartOf="@+id/lobbySortSpinner"
        app:layout_constraintTop_toBottomOf="@+id/joinPublicLobbies" />

    <Spinner
        android:id="@+id/lobbySortSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lobbySortTextView"
        app:layout_constraintBottom_toBottomOf="@+id/lobbySortTextView" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/publicLobbiesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/joinGameButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lobbySortTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>