<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/topImage"
        style="@style/Background.Top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <!--
        NB: Here I need to specify the text color without the use the attributes
        as it causes the tests to fail due to the inflater
    -->
    <TextView
        android:id="@+id/PlaylistName"
        style="@style/Text.Titles"
        android:textColor="@color/white"
        android:text="@string/playlist_name_placeholder"
        app:layout_constraintStart_toStartOf="@id/topImage"
        app:layout_constraintTop_toTopOf="@id/topImage" />

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/editButton"
            style="@style/Button.Icon"
            android:src="@drawable/ic_baseline_edit_24"
            android:contentDescription="@string/edit_playlist" />

        <ImageButton
            android:id="@+id/SaveOnlineButton"
            style="@style/Button.Icon"
            android:src="@drawable/ic_baseline_cloud_upload_24"
            android:contentDescription="@string/save_online"/>

        <ImageButton
            android:id="@+id/deleteButton"
            style="@style/Button.Icon"
            android:src="@drawable/ic_baseline_delete_forever_24"
            app:tint="@color/red"
            android:contentDescription="@string/deletePlaylist" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/SongRecyclerView"
        style="@style/RecyclerViews"
        app:layout_constraintBottom_toTopOf="@id/ImportLyricsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonsLayout"
        tools:listitem="@layout/song_item" />

    <Button
        android:id="@+id/ImportLyricsButton"
        style="@style/GradientButton"
        android:layout_marginBottom="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/import_lyrics_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>